--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -7,8 +7,8 @@
     <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout3" android:layout_width="match_parent">
 	    <ImageView android:src="@drawable/icon" android:layout_gravity="center" android:id="@+id/cover_art" android:layout_width="150sp" android:layout_height="150sp"></ImageView>
 	    <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout4" android:layout_width="match_parent" android:orientation="vertical">
-	        <Button android:id="@+id/bookshelf" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/bookshelf" android:layout_gravity="center_horizontal"></Button>
-	        <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/contents" android:text="@string/contents" android:layout_gravity="center_horizontal"></Button>
+	        <Button android:id="@+id/bookshelf" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/bookshelf" android:layout_gravity="center_horizontal" android:onClick="switchToBookshelf"></Button>
+	        <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/contents" android:text="@string/contents" android:layout_gravity="center_horizontal" android:onClick="switchToContents"></Button>
 	    </LinearLayout>
     </LinearLayout>
     <TextView android:layout_height="wrap_content" android:text="@string/title" android:layout_width="wrap_content" android:layout_gravity="center_horizontal" android:id="@+id/title"></TextView>
@@ -22,10 +22,10 @@
     <TextView android:layout_height="wrap_content" android:id="@+id/speed" android:layout_width="wrap_content" android:text="@string/speed" android:layout_gravity="center_horizontal"></TextView>
     <SeekBar android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/speed_slider"></SeekBar>
     <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:layout_width="match_parent">
-        <Button android:id="@+id/prev_chapter" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/prev_chapter" android:layout_weight="1"></Button>
-        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/backward" android:layout_weight="1" android:id="@+id/backward"></Button>
-        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/play" android:layout_weight="1" android:id="@+id/play"></Button>
-        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/forward" android:layout_weight="1" android:id="@+id/forward"></Button>
-        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/next_chapter" android:layout_weight="1" android:id="@+id/next_chapter"></Button>
+        <Button android:id="@+id/prev_chapter" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/prev_chapter" android:layout_weight="1" android:onClick="previousChapter"></Button>
+        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/backward" android:layout_weight="1" android:id="@+id/backward" android:onClick="backward"></Button>
+        <ToggleButton android:text="ToggleButton" android:id="@+id/play" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOff="Play" android:textOn="Pause" android:onClick="playPause"> android:layout_weight="1"</ToggleButton>
+        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/forward" android:layout_weight="1" android:id="@+id/forward" android:onClick="forward"></Button>
+        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/next_chapter" android:layout_weight="1" android:id="@+id/next_chapter"> android:onClick="nextChapter"></Button>
     </LinearLayout>
 </LinearLayout>
